<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="15dp"
    android:layout_marginTop="16dp"
    android:elevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:layout_width="170dp"
            android:layout_height="130dp"
            android:src="@drawable/daylight"
            android:background="@drawable/border"
            android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daylight_coffee"
                android:textSize="16sp"
                android:fontFamily="@font/inter_medium"
                android:textColor="#000000"
                android:layout_marginTop="14dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/american_indonesia"
                android:textSize="11sp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="#818181"
                android:layout_marginTop="4dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    app:cardBackgroundColor="#36C27F"
                    android:layout_height="20dp"
                    app:cardCornerRadius="6dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_4_5"
                        android:textColor="#ffff"
                        android:layout_gravity="center"
                        android:textSize="12sp"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".6"
                    android:layout_height="wrap_content"
                    android:text="@string/_25min"
                    android:fontFamily="@font/inter_semibold"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="5dp"
                    android:textSize="11sp"
                    android:textColor="#868686"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:text="."
                    android:textColor="#868686"
                    android:textSize="11sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1.25"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/free_delivery"
                    android:textSize="11sp"
                    android:textColor="#868686"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
