<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/ns1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0D000000"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bananas_white_background_1"/>
                <LinearLayout
                    android:layout_width="95dp"
                    android:layout_height="31dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/layout_border_other_shop_listing">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="15% OFF"
                        android:textSize="17sp"
                        android:textColor="#ffff"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/inter_semibold"/>

                </LinearLayout>
                <androidx.cardview.widget.CardView
                    app:cardElevation = "16dp"
                    app:cardCornerRadius = "160dp"
                    android:layout_margin = "16dp"
                    android:foregroundGravity = "center"
                    android:layout_gravity="end"
                    android:layout_centerInParent = "true"
                    android:layout_width = "40dp"
                    android:layout_height = "40dp">

                    <!-- simple image view -->
                    <ImageView
                        android:scaleType = "centerCrop"
                        android:src = "@drawable/vector_2x"
                        android:layout_width = "26dp"
                        android:layout_gravity="center"
                        android:layout_height = "23dp"/>
                </androidx.cardview.widget.CardView>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:background="#ffff"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/banana_special_imported_from_singapore_organic_high_rich_in_fiber"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:fontFamily="@font/inter_semibold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1 kg"
                    android:textSize="14sp"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="13dp"
                    android:textColor="#858585"
                    android:fontFamily="@font/inter_regular"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="#ECECEC"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="7dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight=".7"
                            android:layout_height="wrap_content"
                            android:text="@string/aed"
                            android:layout_gravity="bottom"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:fontFamily="@font/inter_bold"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/_250"
                            android:layout_gravity="bottom"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:fontFamily="@font/inter_bold"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_marginStart="3dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".7"
                        android:layout_height="wrap_content"
                        android:text="@string/aed_"
                        android:textColor="#818181"
                        android:textSize="14sp"
                        android:layout_gravity="right|bottom"
                        android:fontFamily="@font/inter_medium"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/_500"
                        android:layout_gravity="bottom"
                        android:textColor="#818181"
                        android:textSize="20sp"
                        android:fontFamily="@font/inter_medium"/>
                    </LinearLayout>
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_marginStart="3dp"
                        android:layout_height="31dp"
                        app:cardCornerRadius="3.6dp"
                        app:cardBackgroundColor="#2CA241">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="50% off"
                            android:textColor="#ffff"
                            android:textSize="15sp" />
                    </androidx.cardview.widget.CardView>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:orientation="horizontal"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="All price are inclusive of Tax"
                    android:textSize="10sp"
                    android:textColor="#858585"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/inter_regular"/>
                
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Quantity"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_regular"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="26dp"/>
                
                <androidx.cardview.widget.CardView
                    android:layout_width="65dp"
                    android:layout_height="21dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginBottom="12dp"
                    app:cardBackgroundColor="#85C226"
                    app:cardCornerRadius="5dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="ADD"
                        android:textSize="10sp"
                        android:textColor="#ffff"
                        android:fontFamily="@font/inter_semibold"
                        android:gravity="center"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffff"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight=".2"
                    android:layout_height="73dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/pile_of_yellow_coins"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="26dp"
                        android:layout_marginStart="19dp"
                        android:layout_marginEnd="60dp"
                        android:text="For every spent you earn dizabo coins"
                        android:textSize="14sp"
                        android:textColor="#000000"
                        android:fontFamily="@font/inter_semibold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_limits_on_maximum_coins_per_order_t_c_apply"
                        android:textSize="11sp"
                        android:textColor="#858585"
                        android:layout_marginTop="9dp"
                        android:layout_marginStart="19dp"
                        android:fontFamily="@font/inter_regular"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="85dp"
                android:background="#ffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Product Details"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_marginTop="22dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/inter_semibold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Product description here Flat 15% off + Additional 5% cashback on 1st medicine order. Hurry! Order now, offer valid only on cart value above AED 100
Product description here Flat 15% off + Additional 5% cashback on 1st medicine order. Hurry! Order now, offer valid only on cart value above AED 100"
                    android:textSize="14sp"
                    android:textColor="#888888"
                    android:fontFamily="@font/inter_regular"
                    android:layout_marginTop="9dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="31dp"
                    android:layout_marginEnd="22dp"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp">
    <LinearLayout
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffff"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="19dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="27dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1 kg"
                android:textSize="12sp"
                android:textColor="#000000"
                android:fontFamily="@font/inter_light"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AED 250"
                android:textSize="14sp"
                android:textColor="#000000"
                android:fontFamily="@font/inter_medium"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#60B246"
            app:cardCornerRadius="5dp"
            android:layout_marginEnd="19dp"
            android:layout_height="43dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADD"
                android:textColor="#ffff"
                android:textSize="16sp"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:layout_gravity="center"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>